Fix height of selected <p>s
<tei:p>s, when selected by frequency, should no longer change
their heights due to the size of the lefthand border. A bit of
extra padding has been added to the left side, which is reduced by
the size of the border when selected.

Also, spacing has been added to some glossed elements.

--- a/hieractivity/css/hieractivity.less
+++ b/hieractivity/css/hieractivity.less
@@ -389,11 +389,12 @@
     
     &.box-p {
       margin: 1em 0;
-      padding: 0.5em;
+      padding: 0.5em 0.5em 0.5em 1em;
       display: block;
     
       &.selected-gi {
-        border-left: 1em solid black;
+        border-left: 0.5em solid black;
+        padding-left: 0.5em;
         color: @gray;
       }
     } // .box-p
